# document-chatbot

./: .gitignore
backend/: pyproject.toml  test_retrieval.py
backend/app/: config.py  main.py
backend/app/api/: chat.py
backend/app/assistant/: agent.py  deps.py  instructions.md  outputs.py
backend/app/auth/: dependencies.py
backend/app/chat/: messages.py  orchestrator.py  streaming.py
backend/app/database/: chats.py  engine.py  supabase.py
backend/app/database/models/: __init__.py  base.py  chat_message.py  chat_thread.py  document_chunk.py  message_citation.py  source_document.py  user.py
backend/app/grounding/: validator.py
backend/app/ingest/: chunker.py  demo_runner.py  embedder.py  parser.py  runner.py
backend/app/retrieval/: fusion.py  queries.py  retriever.py
backend/migrations/: env.py
backend/migrations/versions/: 340c775da208_initial_schema.py  da0bceb5bf42_add_vector_indexes_and_rls_policies.py  f11743f44fb5_add_auth_trigger_for_users_table.py
frontend/: components.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/ui/: button.tsx  buttonVariants.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  env.ts  http.ts  supabase.ts
frontend/src/pages/: Home.tsx  Login.tsx  Signup.tsx
frontend/src/pages/chat/: ChatList.tsx  ChatThread.tsx
